k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-api-service
  namespace: ecommerce
  labels:
    app: ecommerce-api
spec:
  type: ClusterIP
  selector:
    app: ecommerce-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
