k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-api-ingress
  namespace: ecommerce
  labels:
    app: ecommerce-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - http:  # Убрали привязку к домену, теперь будет принимать запросы по любому IP-адресу
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-api-service
                port:
                  number: 80
